# Copyright 2026 Andrew Oates.  All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates.gni")

ksource_set("proc") {
  sources = [
    "alarm.c",
    "defint.c",
    "defint_timer.c",
    "exec.c",
    "exit.c",
    "fork.c",
    "futex.c",
    "group.c",
    "kmutex.c",
    "kthread-queue.c",
    "kthread.c",
    "kthread_pool.c",
    "limit.c",
    "notification.c",
    "pmutex.c",
    "preemption_hook.c",
    "process.c",
    "procfs.c",
    "scheduler.c",
    "session.c",
    "sleep.c",
    "spinlock.c",
    "tasklet.c",
    "tcgroup.c",
    "umask.c",
    "user.c",
    "user_prepare.c",
    "user_thread.c",
    "wait.c",
  ]
  deps = [
    "load",
    "signal",
  ]
}
