# Copyright 2026 Andrew Oates.  All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates.gni")

tpl_source("syscall_dispatch") {
  sources = [ "syscall_dispatch.tpl" ]
  output_file = "//syscall/syscall_dispatch.tpl.c"
}

tpl_source("syscall_dmz") {
  sources = [ "syscall_dmz.tpl" ]
  output_file = "//syscall/syscall_dmz.tpl.c"
}

ksource_set("syscall") {
  sources = [
    "dmz.c",
    "execve_wrapper.c",
    "fork.c",
    "test.c",
    "wrappers.c",
    "wrappers32.c",
  ]

  # Generated sources (written to source tree by codegen toolchain).
  sources += [ "//syscall/syscall_dispatch.tpl.c" ]
  sources += [ "//syscall/syscall_dmz.tpl.c" ]

  deps = [
    ":syscall_dispatch",
    ":syscall_dmz",
  ]
}
