# Copyright 2026 Andrew Oates.  All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/features.gni")
import("//build/templates.gni")

tpl_source("newlib_syscall_stubs") {
  sources = [ "newlib_syscall_stubs.tpl" ]
  output_file = "//user/newlib_syscall_stubs.tpl.c"
}

# A dummy library that builds the user syscall stubs against system headers to
# make sure they can be compiled.
if (enable_user_dummy_lib) {
  user_static_library("apos_user_dummy") {
    sources = [ "select.c" ]
    sources += [ "//user/newlib_syscall_stubs.tpl.c" ]
    deps = [
      ":apos_syscall",
      ":newlib_syscall_stubs",
    ]
    complete_static_lib = true
  }
}

if (enable_user_os || enable_user_dummy_lib) {
  user_static_library("apos_syscall") {
    sources = [ "archs/${target_cpu}/syscall.s" ]
  }
}

group("user") {
  deps = [ ":newlib_syscall_stubs" ]
  if (enable_user_dummy_lib) {
    deps += [
      ":apos_user_dummy",
      "//user/header_tests:apos_header_tests",
    ]
  }
  if (enable_user_os) {
    deps += [ ":apos_syscall" ]
  }
}
