# Copyright 2026 Andrew Oates.  All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates.gni")

ksource_set("kernel") {
  sources = [
    "arch/dev/interrupts.c",
    "arch/dev/irq.c",
    "arch/dev/isr.s",
    "arch/memory/page_fault.c",
    "arch/memory/page_map.c",
    "arch/proc/exec.c",
    "arch/proc/kthread.c",
    "arch/proc/kthread_asm.s",
    "arch/proc/signal/signal_enter.c",
    "arch/proc/signal/sigreturn_trampoline.s",
    "arch/proc/user_context.c",
    "arch/proc/user_context_asm.s",
    "arch/proc/user_mode.c",
    "arch/syscall/context.c",
    "arch/syscall/init.c",
    "arch/syscall/syscall_enter.s",
    "internal/dev/faults.c",
    "internal/memory/gdt.c",
    "internal/proc/tss.c",

    # internal/load
    "internal/load/kernel_init.c",
  ]

  deps = [ "//archs/x86-common" ]
}

static_library("kernel_phys") {
  sources = [
    "internal/load/gdt.c",
    "internal/load/idt.c",
    "internal/load/loader.s",
    "internal/load/mem_init.c",
    "internal/memory/gdt.c",
  ]
  deps = [ "//common:kernel_headers" ]
  defines = [ "_MULTILINK_SUFFIX=_PHYS" ]
  configs += [ "//build/config:kernel_config" ]
}

group("generated_headers") {
}
