# Copyright 2026 Andrew Oates.  All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates.gni")

static_library("common") {
  sources = [
    "apos_klog.c",
    "list.c",
    "md5.c",
    "passwd.c",
  ]

  configs += [ "//build/config:user_config" ]
}
# TODO(aoates): add target for native common lib
# TODO(aoates): add target for passwd_test
