# Copyright 2026 Andrew Oates.  All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates.gni")

_bins = [
  "aposh",
  "getty",
  "init",
  "login",
]
foreach(bin, _bins) {
  user_executable(bin) {
    sources = [ "${bin}.c" ]
    deps = [ "//os/common:common-lib" ]
  }
}

user_executable("ktest") {
  sources = [ "ktest.c" ]
}

group("core") {
  deps = [
    ":aposh",
    ":getty",
    ":init",
    ":ktest",
    ":login",
  ]
}
# TODO(aoates): add loader support
