# Copyright 2026 Andrew Oates.  All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

action_foreach("dtb_testdata") {
  script = "gen_dtb_header.py"
  sources = [
    "interrupt_test.dts",
    "large_golden.dts",
    "long_string.dts",
    "parse_test.dts",
    "small_golden.dts",
  ]
  license_template = "//build/license_template.h"
  inputs = [ license_template ]

  # Output the results into the source tree.
  outputs = [ "$target_gen_dir/" +
              rebase_path("//test/dtb_testdata/{{source_file_part}}.h",
                          target_gen_dir) ]

  args = [
    "{{source}}",
    rebase_path(license_template, root_build_dir),
    "{{source}}.h",
  ]
}
