# Copyright 2026 Andrew Oates.  All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/features.gni")
import("//build/templates.gni")

assert(compiler == "clang", "test/tsan is clang-only")

# tsan_test.c: compiled with the normal kernel+TSAN flags (only enabled with
# TSAN_CORE or TSAN_FULL).
ksource_set("tsan_tests") {
  sources = [ "tsan_test.c" ]
}

# The instrumented files _always_ have TSAN enabled.
ksource_set("tsan_instrumented") {
  sources = [
    "instrumented.c",
    "instrumented_raw_spinlock.c",
  ]
  cflags = [ "-fsanitize=thread" ]
}

group("tsan") {
  deps = [
    ":tsan_instrumented",
    ":tsan_tests",
  ]
}
