# Copyright 2026 Andrew Oates.  All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates.gni")

# A set of compile-time tests that verify the headers in user_env set up
# constants, etc properly (which is not the case with stock newlib, for
# example).
user_static_library("apos_header_tests") {
  sources = [
    "access_test.c",
    "fcntl_test.c",
    "signal_test.c",
    "stdio_test.c",
    "unistd_test.c",
  ]
}
