# Copyright 2026 Andrew Oates.  All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/features.gni")
import("//build/templates.gni")

tpl_source("syscalls_h") {
  sources = [ "apos/syscalls.h.tpl" ]
  output_file = "//user/include/apos/syscalls.h"
}

tpl_source("syscall_decls_h") {
  sources = [ "apos/syscall_decls.h.tpl" ]
  output_file = "//user/include/apos/syscall_decls.h"
}

group("include") {
  deps = [
    ":syscall_decls_h",
    ":syscalls_h",
  ]
}
